--- a/index.html
+++ b/index.html
@@ -1,45 +1,90 @@
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="chrome=1">
-		<title>BinBin</title>
-		<link rel="icon" href="./favicon.ico">
-		<link rel="stylesheet" href="./main.css">
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	</head>
-	<body>
-		<header>
-			<i class="fa fa-arrow-left" aria-hidden="true"></i>
-			<h1 class="title">BinBin</h1>
-		</header>
-		<div class="under">
-			<div class="sidebar">
-				<div class="selections">
-					<h1 class="option">Starred</h1>
-					<h1 class="option">Recent</h1>
-				</div>
-			</div>
-			<div class="space"></div>
-			<div class="main">
-			<table class="dettbl">
-				<tr class="dettr">
-					<td class="dettd name">Name</td>
-					<td class="dettd modified">Last Modified</td>
-					<td class="dettd size">File Size</td>
-				</tr>
-			</table>
-				<div class="content">
-				</div>
-			</div>
-			<div class="infobar">
-				<form> Permalink:<br>
-					<input type="text" id="permalink" readonly>
-				</form>
-				<i class="fa fa-download" aria-hidden="true"></i>
-			</div>
-		</div>
-	</body>
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="main.js"></script>
+<!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>BinBin</title>
+    <link rel="stylesheet" href="./index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:300,400" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script type="text/javascript" src="http://discordonlinejammingcentral.com/jscripts/jquery.js?ver=1804"></script>
+    <script src="https://use.fontawesome.com/c8d5486cd8.js"></script>
+</head>
+
+<body>
+    <div id="header1" class="transition">
+        <img src="./logo.png">
+    </div>
+    <div id="header2">
+        <div id="spectrum">
+            <p class="transition">Spectrum <i class="fa fa-times-circle" aria-hidden="true"></i></p>
+        </div>
+    </div>
+    <div id="sidebar">
+    <span>Developed by <p onclick="window.location='http://discordonlinejammingcentral.com/user-3.html'">ksjdragon</p></span>
+    </div>
+    <div id="mainContainer">
+        <div id="songList">
+        	<div id="directory">
+                <div id="directoryLocation" class="transition">
+                    <p>DOJC Mixtapes</p>
+                </div>
+                <div id="directoryHeader">
+                    <p class="name transition">Name
+                        <i class="fa fa-chevron-down transition"></i>
+                        <i class="fa fa-chevron-up transition"></i>
+                    </p>
+                    <p class="date transition">Date Modified
+                        <i class="fa fa-chevron-down transition"></i>
+                        <i class="fa fa-chevron-up transition"></i>
+                    </p>
+                    <p class="size transition">Size
+                        <i class="fa fa-chevron-down transition"></i>
+                        <i class="fa fa-chevron-up transition"></i>
+                    </p>
+                </div>
+                <div id="directoryCont">
+                    
+                </div>
+                <canvas id="visualize" width="1200" height="250"></canvas>
+        	</div>
+        	<div id="playback">
+                <div id="info">
+                    <div>
+                        <h2></h2>
+                    </div>
+                    <div>
+                        <a download><i class="fa fa-download transition"></i></a>
+                    </div>
+                </div>
+                <div id="tracker">
+                    <div>
+                        <i id="prev" class="fa fa-step-backward" aria-hidden="true"></i>
+                        <i id="pause" class="fa fa-pause-circle transition"></i>
+                        <i id="next" class="fa fa-step-forward" aria-hidden="true"></i>
+                    </div>
+                    <div id="bar">
+                        <p>-:--</p>
+                        <input type="range" min="0", max="100000" value="0">
+                        <p>-:--</p>
+                    </div>
+                </div>
+                <div id="speed">
+                    <i class="fa fa-fast-forward transition"></i>
+                    <input type="range" min="0", max="100" value="25">
+                </div>
+                <div id="volume">
+                    <i class="fa fa-volume-up transition"></i>
+                    <input type="range" min="0", max="100" value="100">
+                </div>
+                <audio controls>
+                    <source src="">
+                </audio>
+        	</div>
+        </div>
+    </div>
+</body>
+<script src="./visualizer.js"></script>
+<script src="./index.js"></script>
 </html>
