--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>BinBin</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:300,400" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -86,5 +86,5 @@
     </div>
 </body>
 <script src="./visualizer.js"></script>
-<script src="./index.js"></script>
+<script src="./main.js"></script>
 </html>
