--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="header1" class="transition">
-        <img src="./logo.png">
+        <h1>BinBin</h1>
     </div>
     <div id="header2">
         <div id="spectrum">
@@ -84,6 +84,7 @@
         	</div>
         </div>
     </div>
+    <input id="copy">
 </body>
 <script src="./visualizer.js"></script>
 <script src="./main.js"></script>
