added hash identifiers

--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
     <div id="mainContainer">
         <div id="songList">
         	<div id="directory">
-                <div id="directoryLocation" class="transition">
-                    <p>DOJC Mixtapes</p>
+                <div id="directoryLocWrapper">
+                    <div id="directoryLocation" class="transition">
+                        <p>a</p>
+                    </div>
+                    <div>
+                        <i class="fa fa-files-o transition"></i>
+                    </div>
                 </div>
                 <div id="directoryHeader">
                     <p class="name transition">Name
