--- a/index.html
+++ b/index.html
@@ -1,97 +1,39 @@
 <!DOCTYPE html>
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>BinBin</title>
-    <link rel="stylesheet" href="./main.css">
     <link rel="icon" href="favicon.ico?v=2">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:300,400" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script type="text/javascript" src="http://discordonlinejammingcentral.com/jscripts/jquery.js?ver=1804"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script></script>
     <script src="https://use.fontawesome.com/c8d5486cd8.js"></script>
 </head>
 
 <body>
-    <div id="header1" class="transition">
-        <h1>BinBin</h1>
-    </div>
-    <div id="header2">
-        <div id="spectrum">
-            <p class="transition">Spectrum <i class="fa fa-times-circle" aria-hidden="true"></i></p>
-        </div>
-    </div>
-    <div id="sidebar">
-    <span>Developed by <p onclick="window.location='http://discordonlinejammingcentral.com/user-3.html'">ksjdragon</p></span>
-    </div>
-    <div id="mainContainer">
-        <div id="songList">
-        	<div id="directory">
-                <div id="directoryLocWrapper">
-                    <div id="directoryLocation" class="transition">
-                        <p>a</p>
-                    </div>
-                    <div>
-                        <i class="fa fa-files-o transition"></i>
-                    </div>
-                </div>
-                <div id="directoryHeader">
-                    <p class="name transition">Name
-                        <i class="fa fa-chevron-down transition"></i>
-                        <i class="fa fa-chevron-up transition"></i>
-                    </p>
-                    <p class="date transition">Date Modified
-                        <i class="fa fa-chevron-down transition"></i>
-                        <i class="fa fa-chevron-up transition"></i>
-                    </p>
-                    <p class="size transition">Size
-                        <i class="fa fa-chevron-down transition"></i>
-                        <i class="fa fa-chevron-up transition"></i>
-                    </p>
-                </div>
-                <div id="directoryCont">
-                    
-                </div>
-                <canvas id="visualize" width="1200" height="250"></canvas>
-        	</div>
-        	<div id="playback">
-                <div id="info">
-                    <div>
-                        <h2></h2>
-                    </div>
-                    <div>
-                        <a download><i class="fa fa-download transition"></i></a>
-                    </div>
-                </div>
-                <div id="tracker">
-                    <div>
-                        <i id="prev" class="fa fa-step-backward" aria-hidden="true"></i>
-                        <i id="pause" class="fa fa-pause-circle transition"></i>
-                        <i id="next" class="fa fa-step-forward" aria-hidden="true"></i>
-                    </div>
-                    <div id="bar">
-                        <p>-:--</p>
-                        <input type="range" min="0", max="100000" value="0">
-                        <p>-:--</p>
-                    </div>
-                </div>
-                <div id="speed">
-                    <i class="fa fa-fast-forward transition"></i>
-                    <input type="range" min="0", max="100" value="25">
-                </div>
-                <div id="volume">
-                    <i class="fa fa-volume-up transition"></i>
-                    <input type="range" min="0", max="100" value="100">
-                </div>
-                <audio controls>
-                    <source src="">
-                </audio>
-        	</div>
-        </div>
-    </div>
-    <input id="copy">
 </body>
-<script src="./visualizer.js"></script>
-<script src="./main.js"></script>
+<script>
+    var prefix = (screen.width <= 699) ? "mobile" : "desktop";
+    var scripts = {
+        "desktop": ["visualizer", "desktop"],
+        "mobile": ["mobile"]
+    };
+    var l = document.createElement("link");
+    l.rel = "stylesheet";
+    l.href = "./"+prefix+"/"+prefix+".css";
+    document.getElementsByTagName("head")[0].appendChild(l);
+    $.ajax({
+        type:"GET",
+        url:window.location.origin + "/"+prefix+"/"+prefix+".html", 
+        success: function(d){
+            document.getElementsByTagName("body")[0].outerHTML = d;
+            for(var i = 0; i < scripts[prefix].length; i++) {
+                var s = document.createElement("script");
+                s.src = "./"+prefix+"/"+scripts[prefix][i]+".js";
+                document.getElementsByTagName("html")[0].appendChild(s);
+            }
+        }
+    });
+</script>
 </html>
