minor fixes and bugs

--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div id="sidebar">
-    <span>Developed by <p onclick="window.location='http://discordonlinejammingcentral.com/user-3.html'">ksjdragon</p></span>
+        <span>Developed by <p onclick="window.open('https://github.com/ksjdragon/binbin.git','_blank')">ksjdragon</p></span>
     </div>
     <div id="mainContainer">
         <div id="songList">
