--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -14,6 +14,7 @@
 		<i class="fa fa-arrow-up transition"></i>
 	</div>
     <div id="sidebar" class="transition">
+    	<span>Developed by <p onclick="window.open('https://github.com/ksjdragon/binbin.git','_blank')">ksjdragon</p></span>
     </div>
     <div id="mainContainer">
     	<div id="directory">
