--- a/index.html
+++ b/index.html
@@ -4,16 +4,104 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>BinBin</title>
     <link rel="icon" href="favicon.ico?v=2">
+    <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script></script>
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
     <script src="https://use.fontawesome.com/c8d5486cd8.js"></script>
 </head>
 
 <body>
+    <canvas id="canvas" width=window.innerHeight></canvas>
+    <div id="formContainer">
+        <h1>BinBin</h1>
+        <form id="login" onsubmit="login(form);">
+            <p>Username:</p>
+            <input class="transition" type="text" name="username">
+            <p>Password:</p>
+            <input class="transition" type="password" name="password">
+        </form>
+        <button class="transition" onclick="login(get('#login'));" >Login</button>
+    </div>
+
+
 </body>
 <script>
+    var t = 0
+
+    function get(name) {
+        ele = document.querySelectorAll(name)
+        return (ele.length === 1) ? ele[0] : ele;
+    }
+
+    function login(form) {
+        u = form.username.value;
+        p = form.password.value;
+        console.log(`Login: ${u}, ${p}`);
+    }
+
+    function drawCanvas() {
+        var el = get("canvas")
+        var c = el.getContext("2d")
+        var block = 10, space = 2, size = block+space;
+        var w = window.innerWidth, h = window.innerHeight;
+        var x = w/size, y = h/size;
+        var offX = -(w-Math.floor(x)*size)/2, offY = -(h-Math.floor(y)*size)/2;
+        var period = 100, freq = 2*Math.PI/period, step = 1.4, base = 0.05;
+
+        el.width = w, el.height = h;
+        var col = randColor();
+        var dir = randDir();
+
+        function animCanvas(t, col) {
+            c.fillStyle = "#0e0e0e";
+            c.fillRect(0, 0, w, h);
+            for(var i = 0; i < x+1; i++) {
+                for(var j = 0; j < y+1; j++) {
+                    var intes = Math.round(step*Math.cos((i+j*dir[0]+t*dir[1])*freq)+step)*0.2/step+base
+                    c.fillStyle = `rgba(${col[0]},${col[1]},${col[2]},${intes})`;
+                    c.fillRect(i*size+offX, j*size+offY, block, block);
+                }
+            }
+            return 1
+        }
+
+        function randColor() {
+            var arr = [
+                128*Math.round(2*Math.random())-1,
+                128*Math.round(2*Math.random())-1,
+                128*Math.round(2*Math.random())-1
+            ];
+            while(arr[0]+arr[1]+arr[2] < 382) arr = randColor();
+            return arr;
+        }
+
+        function randDir() {
+            return [
+                (Math.round(Math.random())) ? -1 : 1,
+                (Math.round(Math.random())) ? -1 : 1
+            ];
+        }
+
+        setInterval(function() {
+            t += animCanvas(t, col);
+            if(t == period) {
+                t = 0;
+                newCol = randColor();
+                while(newCol === col) newCol == randColor();
+                col = newCol;
+                
+            }
+        }, 80);
+    }
+
+    drawCanvas();
+
+    
+
+    /*
     var prefix = (screen.width <= 699) ? "mobile" : "desktop";
     var scripts = {
         "desktop": ["visualizer", "desktop"],
@@ -35,5 +123,6 @@
             }
         }
     });
+    */
 </script>
 </html>
