--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <canvas id="canvas" width=window.innerHeight></canvas>
     <div id="formContainer">
-        <div>
+        <div id="formSizeWrapper">
             <h1>BinBin</h1>
             <form id="login" onsubmit="login(form);">
                 <p>Username:</p>
@@ -24,7 +24,9 @@
                 <p>Password:</p>
                 <input class="transition" type="password" name="password">
             </form>
-            <button class="transition" onclick="login(get('#login'));" >Login</button>
+            <div>
+                <button class="transition" onclick="login(get('#login'));" >Login</button>
+            </div>
         </div>
     </div>
 
@@ -102,7 +104,10 @@
 
     drawCanvas();
 
-    
+    inputs = get("input")
+    for(var i = 0; i < inputs.length; i++) {
+        inputs[i].style.padding = "5%";
+    }
 
     /*
     var prefix = (screen.width <= 699) ? "mobile" : "desktop";
